--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,6 @@ notifications:
 
 after_success:
 - |
-  $(npm bin)/set-up-ssh --key "$encrypted_3f698a17050f_key" \
+  ./.travis/set-up-ssh --key "$encrypted_3f698a17050f_key" \
                         --iv "$encrypted_3f698a17050f_iv" \
                         --path-encrypted-key ".travis/github_deploy_key.enc"
