--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ cache:
   directories:
   - node_modules
 before_deploy:
-- ssh-keyscan -t $TRAVIS_SSH_KEY_TYPES -H $DEPLOY_HOST 2>&1 | tee -a $HOME/.ssh/known_hosts
+- ssh-keyscan -t $TRAVIS_SSH_KEY_TYPES -H \$DEPLOY_HOST 2>&1 | tee -a $HOME/.ssh/known_hosts
 - openssl aes-256-cbc -K $encrypted_3f698a17050f_key -iv $encrypted_3f698a17050f_iv
   -in .travis/deploy_rsa.enc -out /tmp/deploy_rsa -d
 - eval "$(ssh-agent -s)"
